css background image
just changed the background image in css

--- a/coding project-Maxim Tomášek/style.css
+++ b/coding project-Maxim Tomášek/style.css
@@ -114,7 +114,7 @@ nav.shadow .logo{
 .home{
     width: 100%;
     min-height: 440px;
-    background: url();
+    background: url(images/pexels-ken-tomita-389818.jpg);
     display: grid;
     justify-content: center;
     align-items: center;
