Feat: move footer to bottom on smaller pages

--- a/coding project-Maxim Tomášek/style.css
+++ b/coding project-Maxim Tomášek/style.css
@@ -21,6 +21,16 @@
     background: var(--second-color);
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+    .main-content {
+        flex-grow: 1;
+    }
+}
+
 a{
     text-decoration: none;
 }
