--- a/coding project-Maxim Tomášek/style.css
+++ b/coding project-Maxim Tomášek/style.css
@@ -57,6 +57,9 @@ a{
     color: #fff;
 }
 
+.link-black {
+    color: #000000;
+}
 /* nav */
 nav{
     position: fixed;
@@ -93,18 +96,23 @@ nav.shadow .logo{
     color: var(--second-color);
 }
 
-.login{
+.button{
     padding: 8px 14px;
     text-transform: uppercase;
     font-weight: 500;
     border-radius: 4px;
     background: var(--second-color);
     color: var(--bg-color);
+    border: none;
 }
 
-.login:hover{
+.button:hover{
     background: hsl(199, 98%, 56%);
     transition: .5s;
+}
+
+.button--mt {
+    margin-top: 1.5rem;
 }
 
 .registration{
@@ -574,7 +582,7 @@ footer p{
     }
 }
 
-/* Register */
+/* Register and Login*/
 .panel-header {
     position: relative;
     display: flex;
@@ -590,6 +598,7 @@ footer p{
 }   
 
 .input-label, .checkbox-label {
+    display: inline-block;
     margin-top: 1.5rem;
 }
 
@@ -615,22 +624,21 @@ footer p{
     border-radius: 0.25rem;
 }
 
-.button {
-    padding: 8px 14px;
-    text-transform: uppercase;
-    font-weight: 500;
-    background: var(--second-color);
-    color: var(--bg-color);
-    cursor: pointer;
-}
-
-.button--right {
-    align-self: flex-end;
-}
-
 .panel-link {
     text-align: center;
     display: block;
     color: #172317;
     text-decoration: underline;
+}
+
+/*Textarea*/
+.textarea-style {
+    width: 50%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
 }
