--- a/coding project-Maxim Tomášek/style.css
+++ b/coding project-Maxim Tomášek/style.css
@@ -14,6 +14,7 @@
     --second-color: rgba(77, 228, 255);
     --text-color: #172317;
     --bg-color: #fff;
+    --drop-shadow: #00000040;
 }
 
 ::selection{
@@ -611,7 +612,15 @@ footer p{
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
-}   
+
+    .button--dialog {
+        margin-top: 2.75rem;
+    }
+}
+
+.panel-form--dialog {
+    margin-top: 2.5rem;
+}
 
 .input-label, .checkbox-label {
     display: inline-block;
@@ -696,5 +705,46 @@ footer p{
 
 .message--success {
     background-color: #007418;
+}
+
+/*Login dialogue and more*/
+.dialog {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 31.5rem;
+    max-width: 100%;
+    border-radius: 1.5625rem;
+    background: var(--bg-color);
+    border: none;
+    padding: 0.5rem 0.5rem;
+}
+
+.open-dialog {
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.close-dialog-wrapper {
+    text-align: right;
+}
+
+.close-dialog {
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+
+.toast {
+    width: 15rem;
+    padding: 1rem;
+    border-radius: 0.75rem;
+    box-shadow: 0.25rem 0.25rem 1rem var(--drop-shadow);
+    position: fixed;
+    right: 2rem;
+    background: var(--bg-color);
 }
 
