Front End href correction

--- a/public/Resources/style/style.css
+++ b/public/Resources/style/style.css
@@ -144,7 +144,7 @@ nav.shadow .logo{
 .home{
     width: 100%;
     min-height: 440px;
-    background: url(public/Resources/images/pexels-ken-tomita-389818.jpg);
+    background: url(../images/pexels-ken-tomita-389818.jpg);
     display: grid;
     justify-content: center;
     align-items: center;
